# MEGAFS

./: License.md  README.md  pyproject.toml
examples/: basic_usage.py  change_parameters.py
src/megafs/: __init__.py  megafs.py
tests/: test_file.py
